src/objects/FinServ__ChargesAndFees__c.object
<CustomObject>
    <description>Represents bank fees and charges for servicing a client&apos;s financial account</description>
    <fields>
        <fullName>FinServ__APRType__c</fullName>
        <description>Annual percentage rate type</description>
        <label>APR Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__APR__c</fullName>
        <description>Annual percentage rate applied to balances on the card.</description>
        <label>APR</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__ATMFee__c</fullName>
        <label>ATM Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__AnnualAccountCharge__c</fullName>
        <label>Annual Account Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__AnnualMembershipFee__c</fullName>
        <label>Annual Membership Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BalanceTransferAPR__c</fullName>
        <description>Annual percentage rate of the balance transfer.</description>
        <label>Balance Transfer APR</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__CashAPRType__c</fullName>
        <description>Cash annual percentage rate type</description>
        <label>Cash APR Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CashAPR__c</fullName>
        <description>Annual percentage rate applied to cash withdrawals on the card.</description>
        <label>Cash APR</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__CashAdvanceFee__c</fullName>
        <label>Cash Advance Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ForeignTransactionFee__c</fullName>
        <label>Foreign Transaction Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__InsufficientFundsFee__c</fullName>
        <label>Insufficient Funds Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__InterestRate__c</fullName>
        <label>Interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__LatePaymentFee__c</fullName>
        <label>Late Payment Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__MaximumTransactionFee__c</fullName>
        <label>Maximum Transaction Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__MonthlyServiceFee__c</fullName>
        <label>Monthly Service Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__OverdraftFees__c</fullName>
        <label>Overdraft Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ReplacementCardFee__c</fullName>
        <label>Replacement Card Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ReturnedCheckFee__c</fullName>
        <label>Returned Check Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__StatementFee__c</fullName>
        <label>Statement Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__StopPaymentFee__c</fullName>
        <label>Stop Payment Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Charges And Fees</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Charges And Fees Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charges And Fees</pluralLabel>
    <recordTypes>
        <fullName>FinServ__Credit</fullName>
        <active>true</active>
        <description>Fees and rates for a line of credit</description>
        <label>Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__Debit</fullName>
        <active>true</active>
        <description>Fees and rates for a deposit account</description>
        <label>Debit</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>